# storylife-utils

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/automation/: character_selector.rs  discord.rs  input_sender.rs  mining.rs  mod.rs  ocr.rs  process_manager.rs  screen_capture.rs  window_finder.rs
src-tauri/src/commands/: automation.rs  config.rs  manual.rs  mining.rs  mod.rs  muscu.rs
src/components/: Dashboard.tsx  DebugSteps.tsx  LogViewer.tsx  Mining.tsx  Muscu.tsx  Settings.tsx  StatusIndicator.tsx
src/hooks/: useMiningEvents.ts  useMuscuEvents.ts  useTauriEvents.ts
src/lib/: invoke.ts
src/styles/: globals.css
