[package]
name = "storylifeutils"
version = "1.0.0"
description = "StoryLifeUtils - Automatisation pour StoryLife"
authors = ["DIMZOU"]
edition = "2021"

[lib]
name = "storylifeutils_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
dirs = "6"
image = "0.25"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_ProcessStatus",
    "Win32_System_Com",
    "Win32_System_WinRT",
    "Globalization",
    "Foundation",
    "Foundation_Collections",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage_Streams",
] }
